# ROS_NODE_MASTER

./: README.md
environment_master/: CMakeLists.txt  package.xml
environment_master/scripts/: environment.py  environment_test (复件).py
ultrasonic_master/: CMakeLists.txt  package.xml
ultrasonic_master/scripts/: gas_uart_ultraSonic_a02.py  ultraSonic.py
ultrasonic_master/src/: ultrasonic (复件).cpp  ultrasonic.cpp
wakeup+xfei_asr/wakeup/: CMakeLists.txt  package.xml
wakeup+xfei_asr/wakeup/resources/models/: listen2me.pmdl
wakeup+xfei_asr/wakeup/scripts/: demo.py
wakeup+xfei_asr/wakeup/scripts/msc/3f3948cd95668c5de673c2252058bdba/: u.data  urec.data
wakeup+xfei_asr/xfei_asr/: CMakeLists.txt
wakeup+xfei_asr/xfei_asr/launch/: xfei_voice.launch
wakeup+xfei_asr/xfei_asr/src/: asr_sample.c  iat_publish_speak(auto).cpp  iat_publish_speak.cpp  iat_record.c  iat_sample.c  sch_speak.c  sch_text.c  sub_word.cpp  tts_sample.c  tts_subscribe_speak.cpp
wakeup+xfei_asr/xfei_asr/src/msc/3f3948cd95668c5de673c2252058bdba/: usr.cdata1665997231  usr.cdata_r
yzmr9_stm32_connect/: CMakeLists.txt  package.xml
yzmr9_stm32_connect/launch/: start_basecontrol.launch
yzmr9_stm32_connect/src/: moto_drv.cpp  moto_drv.h  plc.cpp  plc.h  pms.cpp  pms.h  psc.cpp  psc.h  robotserial.cpp  robotserial.h  serial.cc  stm32_connect.cpp  stm32_connect.h
